--- a/facility-listings.html
+++ b/facility-listings.html
@@ -33,19 +33,20 @@
             <!-- Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul
-                    class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4">
+                    class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4 d-lg-none">
+                    <!-- <li class="nav-item">
+                            <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link mx-2 text-primary" href="#">Community</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
+                        </li> -->
                     <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
+                        <a class="nav-link mx-2 text-primary" href="facility-listings.html" id="registerBtn">Facility
+                            Listings</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="#">Community</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
-                    </li>
-                                <li class="nav-item">
-                                    <a class="nav-link mx-2 text-primary" href="facility-listings.html" id="registerBtn">Facility Listings</a>
-                                </li>
                     <li class="nav-item  d-lg-none" id="logout-btn-container">
                         <button
                             class="dropdown-item py-2 text-primary fw-semibold logout-btn nav-link mx-2 text-primary"
@@ -80,6 +81,16 @@
                                     </div>
                                 </div>
                             </li>
+                            <li id="admin-dashboard"><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                                    href="/admin-dashboard/health-facilities.html">
+                                    <img src="assets/images/user.png" width="25" alt="">
+                                    My Account
+                                </a></li>
+                            <li><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                                    href="/facility-listings.html">
+                                    <img src="assets/images/hospital-facility.png" width="25" alt="">
+                                    Facility Listings
+                                </a></li>
                             <div class="border-top mt-2 pt-2">
                                 <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
                                     Logout
@@ -175,74 +186,25 @@
     <!-- Footer start -->
     <footer class="footer-section">
         <div class="container">
-            <div class="row row-gap-3">
-                <div class="col-lg-5 col-md-6 text-md-start text-center">
-                    <div class="footer-card">
-                        <div class="footer-img">
-                            <a href="">
-                                <img src="assets/images/logo.png" width="150" alt="" class="img-fluid logo">
-                            </a>
-                        </div>
-                        <div class="footer-content">
-                            <p class="mt-4 mb-3">Join our newsletter for latest updates <br>
-                                and features. You don't want to miss it!</p>
-                            <div class="footer-subscribe position-relative w-100">
-                                <input type="email" class="" placeholder="Enter your email here">
-                                <button type="submit" class="btn">Subscribe</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 text-md-start text-center">
-                    <ul class="navbar-nav">
-                        <h5 class="fw-bold footer-heading text-primary">Home</h5>
-                        <li class="nav-item"><a href="emergency.html" class="nav-link">Emergency</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Symptoms</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Remote Care</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Monitors</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Health Info</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Blogs</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 text-md-start text-center">
-                    <ul class="navbar-nav">
-                        <h5 class="fw-bold footer-heading text-primary">Communities</h5>
-                        <li class="nav-item"><a href="/user-dashboard/hospitals.html" class="nav-link">Hospitals</a>
-                        </li>
-                        <li class="nav-item"><a href="#" class="nav-link">Pharmacy</a></li>
-                        <li class="nav-item"><a href="/user-dashboard/Chemists.html" class="nav-link">Community Digital
-                                Health Assistants</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Tech Support</a></li>
-                        <li class="nav-item"><a href="/user-dashboard/complaints.html" class="nav-link">Complaints</a>
-                        </li>
-                        <li class="nav-item"><a href="/user-dashboard/reviews.html" class="nav-link">Reviews</a></li>
-                        <li class="nav-item"><a href="/user-dashboard/privacy-policy.html" class="nav-link">Privacy
-                                Policy</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 text-md-start text-center">
-                    <ul class="navbar-nav">
-                        <h5 class="fw-bold footer-heading text-primary">Profile</h5>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Sponsorship</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Print</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Password & Pin</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Access Control</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">National Policies</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Share link</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Delete Account</a></li>
-                    </ul>
+            <div class="footer-card">
+                <div class="footer-img text-center">
+                    <a href="/">
+                        <img src="assets/images/logo.png" width="150" alt="" class="img-fluid logo">
+                    </a>
                 </div>
             </div>
         </div>
-        <hr class="mt-5 mb-2">
+        <hr class="mt-4 mb-2">
         <div class="copyright-section d-flex align-items-center">
             <p class="font-size">© Copyright 2025 HealthMonitor. All rights reserved</p>
             <p class="ms-md-auto me-3 font-size">Share on socials</p>
             <div class="social-media">
-                <img src="assets/icons/X.svg" alt="img" class="">
-                <img src="assets/icons/Facebook.svg" alt="img" class="">
-                <img src="assets/icons/Instagram.svg" alt="img" class="">
-                <img src="assets/icons/Telegram.svg" alt="img" class="">
+                <img src="assets/icons/X.svg" alt="img" id="x-share-btn">
+                <img src="assets/icons/Facebook.svg" alt="img" id="fb-share-btn">
+                <a href="https://www.instagram.com/">
+                    <img src="assets/icons/Instagram.svg" alt="img" class="">
+                </a>
+                <img src="assets/icons/linkedin.svg" alt="img" id="linkedin-share-btn">
             </div>
         </div>
 
@@ -252,59 +214,68 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
+    <script src="js/share.js"></script>
     <script>
 
-            let time_slots = [];
-            const id = localStorage.getItem('u_id');
-            console.log(id);
-            axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
-                headers: {
-                    'id': id
-                }
-            }).then((res) => {
-                user = res.data.user.name;
-                const userName = document.querySelectorAll('.user-name');
-                const email = document.getElementById('user-role');
-
-                userName.forEach((name) => {
-                    name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
-                })
-
-                email.innerHTML = res.data.user.role
-
-            }).catch((err) => {
-                console.log(err);
-            })
-
-            const isLoginIn = localStorage.getItem('login');
-            const loginBtn = document.getElementById('login-btn');
-            const loginOut = document.getElementById('logout-btn');
-            const loginOut2 = document.getElementById('logout-btn2');
-            const profileBtn = document.getElementById('profile-btn');
-            const logoutBtnContainer = document.getElementById('logout-btn-container');
-
-            if (isLoginIn === 'true') {
-                loginBtn.classList.add('d-none');
-                profileBtn.classList.remove('d-none');
-                logoutBtnContainer.classList.remove('d-none');
-            } else {
-                location.href = '/login.html';
-                loginBtn.classList.remove('d-none');
-                profileBtn.classList.add('d-none');
-                logoutBtnContainer.classList.add('d-none');
-
+        let time_slots = [];
+        const id = localStorage.getItem('u_id');
+        console.log(id);
+        axios.get('https://health-care-facilities-backend.vercel.app/api/get-user', {
+            headers: {
+                'id': id
             }
+        }).then((res) => {
+            user = res.data.user.name;
+            const userName = document.querySelectorAll('.user-name');
+            const email = document.getElementById('user-role');
 
-            loginOut.addEventListener(('click'), () => {
-                localStorage.removeItem('login')
-                localStorage.removeItem('u_id')
-                location.reload()
+            userName.forEach((name) => {
+                name.innerHTML = `${res.data.user.name} ${res.data.user.last_name}`;
             })
-            loginOut2.addEventListener(('click'), () => {
-                localStorage.removeItem('login')
-                localStorage.removeItem('userId')
-                location.reload()
-            })
+
+            email.innerHTML = res.data.user.role
+
+
+            if (res.data.user.role === 'super admin') {
+                document.getElementById('admin-dashboard').classList.remove('d-none');
+                document.getElementById('nav-admin-dashboard').classList.remove('d-none');
+            } else {
+                document.getElementById('admin-dashboard').classList.add('d-none');
+                document.getElementById('nav-admin-dashboard').classList.add('d-none');
+            }
+        }).catch((err) => {
+            console.log(err);
+        })
+
+        const isLoginIn = localStorage.getItem('login');
+        const loginBtn = document.getElementById('login-btn');
+        const loginOut = document.getElementById('logout-btn');
+        const loginOut2 = document.getElementById('logout-btn2');
+        const profileBtn = document.getElementById('profile-btn');
+        const logoutBtnContainer = document.getElementById('logout-btn-container');
+
+        if (isLoginIn === 'true') {
+            loginBtn.classList.add('d-none');
+            profileBtn.classList.remove('d-none');
+            logoutBtnContainer.classList.remove('d-none');
+        } else {
+            location.href = '/login.html';
+            loginBtn.classList.remove('d-none');
+            profileBtn.classList.add('d-none');
+            logoutBtnContainer.classList.add('d-none');
+
+        }
+
+        loginOut.addEventListener(('click'), () => {
+            localStorage.removeItem('login')
+            localStorage.removeItem('u_id')
+            location.reload()
+        })
+        loginOut2.addEventListener(('click'), () => {
+            localStorage.removeItem('login')
+            localStorage.removeItem('userId')
+            location.reload()
+        })
 
         const facilityContainer = document.getElementById('facility-container');
 
@@ -341,7 +312,6 @@
                     let timingHTML = '';
                     let facilityAEHTML = '';
                     const timeSlots = item.time_slots;
-                    console.log(timeSlots);
 
                     // Handle 24-hour timing
                     const startTime = item.time_slots[0]?.start_time;
@@ -371,7 +341,7 @@
                             function formatTime(time) {
                                 let [hours, minutes] = time.split(":").map(Number);
                                 let period = hours >= 12 ? "PM" : "AM";
-                                hours = hours % 12 || 12; // Convert to 12-hour format
+                                hours = hours % 12 || 12;
                                 return `${hours}:${minutes.toString().padStart(2, "0")} ${period}`;
                             }
 
@@ -406,7 +376,7 @@
                     }
 
                     facilityContainer.innerHTML += `
-        <div class="col-12 p-0 col-sm-6 col-md-4 px-3 h-100">
+        <div class="col-12 p-0 col-sm-6 col-md-4 px-3 card-col h-100">
             <div class="facility-card p-4">
                 <div class="text-center mb-3">
                     <h2 class="facility-name mb-1">${item.organisation_name}</h2>
@@ -486,8 +456,8 @@
         //  Table Render Function
         function renderCard(data) {
             facilityContainer.innerHTML = ''
+
             data.forEach((item) => {
-                console.log(item);
                 let timingHTML = '';
                 let facilityAEHTML = '';
                 const timeSlots = item.time_slots;
@@ -520,7 +490,7 @@
                         function formatTime(time) {
                             let [hours, minutes] = time.split(":").map(Number);
                             let period = hours >= 12 ? "PM" : "AM";
-                            hours = hours % 12 || 12; // Convert to 12-hour format
+                            hours = hours % 12 || 12;
                             return `${hours}:${minutes.toString().padStart(2, "0")} ${period}`;
                         }
 
@@ -555,7 +525,7 @@
                 }
 
                 facilityContainer.innerHTML += `
-        <div class="col-12 p-0 col-sm-6 col-md-4 px-3 h-100">
+        <div class="col-12 p-0 col-sm-6 col-md-4 px-3 h-100 card-col">
             <div class="facility-card p-4">
                 <div class="text-center mb-3">
                     <h2 class="facility-name mb-1">${item.organisation_name}</h2>
@@ -610,11 +580,11 @@
         const sharePopup = document.getElementById('share-popup');
         const shareCloseBtn = document.getElementById('share-close');
 
-        shareCloseBtn.addEventListener(('click') , () => {
-                sharePopup.classList.add('d-none');
+        shareCloseBtn.addEventListener(('click'), () => {
+            sharePopup.classList.add('d-none');
         })
 
-        sharePopup.addEventListener(('click') , (e) => {
+        sharePopup.addEventListener(('click'), (e) => {
             if (e.target === sharePopup) {
                 sharePopup.classList.add('d-none');
             }
