--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <!-- Navbar Links -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul
-                    class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4">
-                    <li class="nav-item">
+                    class="navbar-nav align-items-lg-center justify-content-lg-center flex-lg-grow-1 mb-2 mb-lg-0 mt-lg-0 mt-4 d-lg-none">
+                    <!-- <li class="nav-item">
                         <a class="nav-link mx-2 text-primary" href="#">Emergency</a>
                     </li>
                     <li class="nav-item">
@@ -50,9 +50,14 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-2 text-primary" href="#" id="registerBtn">Register</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link mx-2 text-primary" href="facility-listings.html" id="registerBtn">Facility Listings</a>
+                        <a class="nav-link mx-2 text-primary" href="facility-listings.html">Facility
+                            Listings</a>
+                    </li>
+                    <li class="nav-item" id="nav-admin-dashboard">
+                        <a class="nav-link mx-2 text-primary" href="/admin-dashboard/health-facilities.html">My
+                            Account</a>
                     </li>
                     <li class="nav-item  d-lg-none" id="logout-btn-container">
                         <button
@@ -88,6 +93,16 @@
                                     </div>
                                 </div>
                             </li>
+                            <li id="admin-dashboard"><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                                    href="/admin-dashboard/health-facilities.html">
+                                    <img src="assets/images/user.png" width="25" alt="">
+                                    My Account
+                                </a></li>
+                            <li><a class="dropdown-item py-2 d-flex align-items-center gap-3"
+                                    href="/facility-listings.html">
+                                    <img src="assets/images/hospital-facility.png" width="25" alt="">
+                                    Facility Listings
+                                </a></li>
                             <div class="border-top mt-2 pt-2">
                                 <button class="dropdown-item py-2 text-primary fw-semibold" id="logout-btn">
                                     Logout
@@ -545,74 +560,25 @@
     <!-- Footer start -->
     <footer class="footer-section">
         <div class="container">
-            <div class="row row-gap-3">
-                <div class="col-lg-5 col-md-6 text-md-start text-center">
-                    <div class="footer-card">
-                        <div class="footer-img">
-                            <a href="">
-                                <img src="assets/images/logo.png" width="150" alt="" class="img-fluid logo">
-                            </a>
-                        </div>
-                        <div class="footer-content">
-                            <p class="mt-4 mb-3">Join our newsletter for latest updates <br>
-                                and features. You don't want to miss it!</p>
-                            <div class="footer-subscribe position-relative w-100">
-                                <input type="email" class="" placeholder="Enter your email here">
-                                <button type="submit" class="btn">Subscribe</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 text-md-start text-center">
-                    <ul class="navbar-nav">
-                        <h5 class="fw-bold footer-heading text-primary">Home</h5>
-                        <li class="nav-item"><a href="emergency.html" class="nav-link">Emergency</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Symptoms</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Remote Care</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Monitors</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Health Info</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Blogs</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 text-md-start text-center">
-                    <ul class="navbar-nav">
-                        <h5 class="fw-bold footer-heading text-primary">Communities</h5>
-                        <li class="nav-item"><a href="/user-dashboard/hospitals.html" class="nav-link">Hospitals</a>
-                        </li>
-                        <li class="nav-item"><a href="#" class="nav-link">Pharmacy</a></li>
-                        <li class="nav-item"><a href="/user-dashboard/Chemists.html" class="nav-link">Community Digital
-                                Health Assistants</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Tech Support</a></li>
-                        <li class="nav-item"><a href="/user-dashboard/complaints.html" class="nav-link">Complaints</a>
-                        </li>
-                        <li class="nav-item"><a href="/user-dashboard/reviews.html" class="nav-link">Reviews</a></li>
-                        <li class="nav-item"><a href="/user-dashboard/privacy-policy.html" class="nav-link">Privacy
-                                Policy</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-2 col-md-6 text-md-start text-center">
-                    <ul class="navbar-nav">
-                        <h5 class="fw-bold footer-heading text-primary">Profile</h5>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Sponsorship</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Print</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Password & Pin</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Access Control</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">National Policies</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Share link</a></li>
-                        <li class="nav-item"><a href="login.html" class="nav-link">Delete Account</a></li>
-                    </ul>
+            <div class="footer-card">
+                <div class="footer-img text-center">
+                    <a href="/">
+                        <img src="assets/images/logo.png" width="150" alt="" class="img-fluid logo">
+                    </a>
                 </div>
             </div>
         </div>
-        <hr class="mt-5 mb-2">
+        <hr class="mt-4 mb-2">
         <div class="copyright-section d-flex align-items-center">
             <p class="font-size">© Copyright 2025 HealthMonitor. All rights reserved</p>
             <p class="ms-md-auto me-3 font-size">Share on socials</p>
             <div class="social-media">
-                <img src="assets/icons/X.svg" alt="img" class="">
-                <img src="assets/icons/Facebook.svg" alt="img" class="">
-                <img src="assets/icons/Instagram.svg" alt="img" class="">
-                <img src="assets/icons/Telegram.svg" alt="img" class="">
+                <img src="assets/icons/X.svg" alt="img" id="x-share-btn">
+                <img src="assets/icons/Facebook.svg" alt="img" id="fb-share-btn">
+                <a href="https://www.instagram.com/">
+                    <img src="assets/icons/Instagram.svg" alt="img" class="">
+                </a>
+                <img src="assets/icons/linkedin.svg" alt="img" id="linkedin-share-btn">
             </div>
         </div>
 
@@ -633,6 +599,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js"></script>
+    <script src="js/share.js"></script>
     <script>
         let user = '';
 
@@ -656,6 +623,7 @@
                 'id': id
             }
         }).then((res) => {
+            console.log(res.data);
             user = res.data.user.name;
             const userName = document.querySelectorAll('.user-name');
             const email = document.getElementById('user-role');
@@ -665,6 +633,15 @@
             })
 
             email.innerHTML = res.data.user.role
+
+
+            if (res.data.user.role === 'super admin') {
+                document.getElementById('admin-dashboard').classList.remove('d-none');
+                document.getElementById('nav-admin-dashboard').classList.remove('d-none');
+            } else {
+                document.getElementById('admin-dashboard').classList.add('d-none');
+                document.getElementById('nav-admin-dashboard').classList.add('d-none');
+            }
 
         }).catch((err) => {
             console.log(err);
@@ -676,7 +653,7 @@
         const loginOut2 = document.getElementById('logout-btn2');
         const profileBtn = document.getElementById('profile-btn');
         const logoutBtnContainer = document.getElementById('logout-btn-container');
-        
+
         if (isLoginIn === 'true') {
             loginBtn.classList.add('d-none');
             profileBtn.classList.remove('d-none');
